ags (0.7.92)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added unit tests of ags_midi_buffer_util.c
	* fixed ags_midi_buffer_put_varlength(), it was defunctional
	* fixed missing check of AgsRecallDssi in ags_channel.c

ags (0.7.91)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added unit tests in ags_automation_test.c and ags_recall_test.c
	* fixed automation toolbar to toggle port correctly and added empty port
	* fixed ags_midi_buffer_util.c, ags_midi_builder.c and ags_midi_parser.c to conform MIDI specs
	* NOTE arguments are shifted for MIDI SMTPE related functions

ags (0.7.90)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed handle NULL pointer client don't pass it to JACK
	* back-ported ags_midi_buffer_util.[ch] from 1.0
	* back-ported ags_midi_builder.[ch] from 1.0

ags (0.7.89)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash after opening file with unavailable audio file link
	* improved mutices in ags_editor_tic_callback()

ags (0.7.88)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing usage of attack affects BPM
	* fixed code performance issue in ags-play-notation recall
	* removed free-wheel within jack client because not supported
	* modified default buffer size to 1024

ags (0.7.87)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSoundcardEditor not allowed free of string
	* fixed ags_soundcard_editor_add_soundcard() ignore AgsJackDevout
	* fixed ags_soundcard_editor_remove_soundcard() ignore AgsJackDevout

ags (0.7.86)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsNotifySoundcard to fast lock AgsSoundcard
	* implemented cyclic tasks in ags_task_thread_run()
	* implemented ags_task_thread_append_cyclic_task()
	* implemented ags_task_thread_remove_cyclic_task()
	* refactored ags_thread-posix.c to set AgsThread->tic_delay to be reset synced

ags (0.7.85)
