@@ -20,7 +20,7 @@
     <releaseinfo>
       for libags.
       The latest version of this documentation can be found on-line at
-      <ulink role="online-location" url="http://nongnu.org/gsequencer/libags/index.html">http://nongnu.org/gsequencer/libags/</ulink>.
+      <ulink role="online-location" url="http://nongnu.org/gsequencer/api/libags/index.html">http://nongnu.org/gsequencer/api/libags/</ulink>.
     </releaseinfo>
   </bookinfo>
 
