@@ -12,7 +12,7 @@
     <releaseinfo>
       for libags_gui.
       The latest version of this documentation can be found on-line at
-      <ulink role="online-location" url="http://nongnu.org/gsequencer/libags_gui/index.html">http://nongnu.org/gsequencer/libags_gui/</ulink>.
+      <ulink role="online-location" url="http://nongnu.org/gsequencer/api/libags_gui/index.html">http://nongnu.org/gsequencer/api/libags_gui/</ulink>.
     </releaseinfo>
   </bookinfo>
 
