@@ -1,3 +1,8 @@
+ags (0.7.93)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed automation edit restore from simple file
+
 ags (0.7.92)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
